force-app/main/default/objects/refedge__Reference_Request_Additional_Info__c/refedge__Reference_Request_Additional_Info__c.object-meta.xml
<CustomObject>
    <description>Custom Object Additional Referenceability type Information from Reference Use Request Page (Bound 3)</description>
    <label>Reference Request Additional Info</label>
    <nameField>
        <displayFormat>RRAI-{000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Request Additional Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>