force-app/main/default/objects/refedge__Reference_Request_Additional_Info__c/fields/Other_reference_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_reference_Activity_Type__c</fullName>
    <label>Other reference activity type(s) needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst Interviews</fullName>
            </value>
            <value>
                <fullName>Awards Submission</fullName>
            </value>
            <value>
                <fullName>Blog Posts</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Customer Quote</fullName>
            </value>
            <value>
                <fullName>Customer Reference Call</fullName>
            </value>
            <value>
                <fullName>Customer Research/Interview</fullName>
            </value>
            <value>
                <fullName>Customer Site Visit</fullName>
            </value>
            <value>
                <fullName>Dashboard Reference</fullName>
            </value>
            <value>
                <fullName>Earnings Call</fullName>
            </value>
            <value>
                <fullName>External Event Speaker</fullName>
            </value>
            <value>
                <fullName>Internal Event Speaker</fullName>
            </value>
            <value>
                <fullName>Logo Use</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Other (please include in request overview)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>