force-app/main/default/objects/refedge__Reference_Request_Additional_Info__c/fields/Please_list_which_team_you_are_on_below__c.field-meta.xml
<CustomField>
    <fullName>Please_list_which_team_you_are_on_below__c</fullName>
    <label>Which team are you on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Customer Marketing</fullName>
            </value>
            <value>
                <fullName>Content Marketing</fullName>
            </value>
            <value>
                <fullName>Field Marketing</fullName>
            </value>
            <value>
                <fullName>Demand Gen Marketing</fullName>
            </value>
            <value>
                <fullName>Growth Marketing</fullName>
            </value>
            <value>
                <fullName>PMM</fullName>
            </value>
            <value>
                <fullName>Comms</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Analyst Relations</fullName>
            </value>
            <value>
                <fullName>Investor Relations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>