force-app/main/default/objects/refedge__Reference_Request_Additional_Info__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investor relations</fullName>
            </value>
            <value>
                <fullName>Analyst relations</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Marketing campaigns</fullName>
            </value>
            <value>
                <fullName>Product launch</fullName>
            </value>
            <value>
                <fullName>Trade shows/ External events</fullName>
            </value>
            <value>
                <fullName>Run-the-business webinars</fullName>
            </value>
            <value>
                <fullName>User Research</fullName>
            </value>
            <value>
                <fullName>Evergreen solution/product narrative refresh</fullName>
            </value>
            <value>
                <fullName>Customer reference call requests</fullName>
            </value>
            <value>
                <fullName>RFP requests</fullName>
            </value>
            <value>
                <fullName>Internal Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>